--- a/Contact_us.html
+++ b/Contact_us.html
@@ -36,38 +36,21 @@
   <header id="header" class="fixed-top bg-primary ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">PriceLoser</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Priceloser</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="services">Services</a></li>
-         <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li class="active"><a href="Contact_us.html">Contact</a></li>
+          <li><a href="About.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li class="active"><a href="Contact_us.html">Contact Us</a></li>
+          <a href="login.html" class="get-started-btn scrollto">Log In</a>
 
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="login.html" class="get-started-btn scrollto">Log In</a>
 
     </div>
   </header><!-- End Header -->
@@ -83,8 +66,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Contact Us</h2>
+          <p>Email us with any question or inquiries or call 986-124-3799. We would be happy to answer your questions and set up a meeting with you.</p>
         </div>
 
         <div class="row">
@@ -157,20 +140,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -226,7 +195,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>PriceLoser</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Priceloser</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
        
