--- a/apply.html
+++ b/apply.html
@@ -14,7 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top bg-primary ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">PriceLoser</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Priceloser</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -44,24 +44,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="About.html">About</a></li>
-          <li><a href="services">Services</a></li>
-         <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="Contact_us.html">Contact</a></li>
 
         </ul>
@@ -77,6 +60,7 @@
 
 
     <!-- ======= Contact Section ======= -->
+    
     <section class="main_heading  mt-4 pt-6 ">
         <div class="text-center">
             <h1 class="dispaly-4">Application Form</h1>
@@ -85,52 +69,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-xxl-8 col-md-8 m-auto">
-                  <form>
-                      <div class="mb-3">
-                          <label for="name">Name</label>
-                          <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" placeholder="Enter Your Name" data-msg="Please enter at least 4 chars" />
-                          <div class="validate"></div>
-                      <div class="mb-3">
+                  <form action="apply.php" method="post">
+                      <div class="form-group">
+                          <label for="name">Full Name</label>
+                          <input type="text" name="fullname" class="form-control" id="name" data-rule="minlen:4" placeholder="Enter Your Name" data-msg="Please enter at least 4 chars" />
+                        </div>
+                      <div class="form-group mt-3">
                           <label for="name">Father's Name</label>
-                          <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" placeholder="Enter Your Father's Name" data-msg="Please enter at least 4 chars" />
-                          <div class="validate"></div>
-                      <div class="mb-3">
+                          <input type="text" name="fathername" class="form-control" id="name" data-rule="minlen:4" placeholder="Enter Your Father's Name" data-msg="Please enter at least 4 chars" />
+                      </div>
+                      <div class="form-group mt-3">
                           <label for="name">Date Of Birth</label>
                           <input type="date" name="dob" class="form-control" id="dob" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                          <div class="validate"></div>
+                        </div>
+                      <div class="form-group mt-3">
                           <label for="name">Mobile No.</label>
-                          <input type="number" name="mobile" class="form-control" id="mobile" data-rule="minlen:4" placeholder="Enter Your mobile no." data-msg="Please enter Your 10 digit mobile no." />
-                          <div class="validate"></div>
-                          <div class="mb-3">
+                           <input type="number" name="mobile" class="form-control" id="mobile" data-rule="minlen:4" placeholder="Enter Your mobile no." data-msg="Please enter Your 10 digit mobile no." />
+                        </div>
+                          <div class="form-group mt-3">
                               <label for="name">Income Source</label>
                               <input type="text" name="income" class="form-control" id="income" data-rule="minlen:4" placeholder="Enter Your Income Source" data-msg="Please enter at least 4 chars" />
-                              <div class="validate"></div>
-                      <div class="mb-3">
+                          </div>
+                      <div class="form-group mt-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1"placeholder="Enter Your Email" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <input type="email" class="form-control" id="exampleInputEmail1"placeholder="Enter Your Email" name="email" aria-describedby="emailHelp">
                       </div>
-                      <div class="mb-3">
+                      <div class="form-group mt-3">
                           <label for="formFile" class="form-label">Upload Your PAN card</label>
                           <input class="form-control" type="file" id="formFile">
                         </div>
-                      <div class="mb-3">
+                      <div class="form-group mt-3">
                           <label for="formFile" class="form-label">Upload Your Adhar Card</label>
                           <input class="form-control" type="file" id="formFile">
                         </div>
-                      <div class="mb-3">
+                      <div class="form-group mt-3">
                           <label for="formFile" class="form-label">Upload Your Photo </label>
                           <input class="form-control" type="file" id="formFile">
                         </div>
-                      <div class="mb-3">
+                      <div class="form-group mt-3">
                           <label for="formFile" class="form-label">Upload Your Bank Passbook</label>
                           <input class="form-control" type="file" id="formFile">
                         </div>
-                      <div class="mb-3 form-check">
+                      <div class="form-group mt-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Agree Terms & Condition</label>
                       </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <input type="submit"  class="btn btn-primary mt-3"></input>
+                      <a href="chooseShop.html" type="submit" class="btn btn-primary mt-3">Choose your shop</a>
+
                     </form>
                 </div>
             </div>
@@ -147,7 +133,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>PriceLoser</h3>
+            <h3>Priceloser</h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -197,10 +183,9 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>PriceLoser</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Priceloser</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-       
         Designed by A.K.V.
       </div>
     </div>
@@ -225,5 +210,6 @@
  
 
 </body>
-
 </html>
+
+
