--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
+          <form action="" method="POST" class="sign-in-form">
             <h2 class="title">Log in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
@@ -24,7 +24,7 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" />
             </div>
-            <input type="submit" value="Log in" class="btn solid" />
+            <input type="submit" name="login"  value="Log in" class="btn solid" />
             <p class="social-text">Or Log in with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -41,21 +41,25 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form">
+          <form  method="POST" action="register/login.php" class="sign-up-form">
             <h2 class="title">Register</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Username" name="username" required/>
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" name="email" required/>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password" name="password" required />
             </div>
-            <input type="submit" class="btn" value="Register" />
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Confirm Password" name="cpassword" required/>
+            </div>
+            <input type="submit" name="submit" class="btn" value="Register" />
             <p class="social-text">Or Register with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
