--- a/popup.html
+++ b/popup.html
@@ -7,16 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+<style>
+  .bg-primary{
+    background-image: url(img/money-2724241_640.jpg)!important;
+    background-size: cover;
+  }
+</style>
     <title>PriceLoser</title>
   </head>
   <body>
       <div class="container">
-    <div class="jumbotron ">
+    <div class="jumbotron bg-primary">
         <h1 class="display-4 text-center">Welcome</h1>
         <p class="lead text-center"></p>Kindly select one of the option</p>
         <hr class="my-4">
-        <a class="btn btn-primary btn-lg btn-block" href="noEMI.html" role="button">I have an EMI Card</a>
+        <a class="btn btn-primary btn-lg btn-block" href="noEMi.html" role="button">I have an EMI Card</a>
         <a class="btn btn-secondary btn-lg btn-block" href="yesEMi.html" role="button">I don't have an EMI Card</a>
 
          </div>
