--- a/noEMI.html
+++ b/noEMI.html
@@ -45,13 +45,13 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="services">Services</a></li>
-         
           <li><a href="Contact_us.html">Contact</a></li>
+          <a href="./login.html" class="get-started-btn scrollto">Log In</a>
+
 
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="login.html" class="get-started-btn scrollto">Log In</a>
 
     </div>
   </header><!-- End Header -->
